added sections to html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <title></title>
   </head>
   <body>
+    <section class="section header-section"></section>
+    <section class="halfsection quote-section"></section>
+    <section class="halfsection quality-section"></section>
+    <section class="halfsection image-section"></section>
+    <section class="halfsection detail-section-one"></section>
+    <section class="halfsection detail-section-two"></section>
+    <section class="halfsection detail-section-three"></section>
+    <footer></footer>
+
 
   </body>
 </html>
