added stuff to header section

--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="main.css">
+    <link href='https://fonts.googleapis.com/css?family=Heebo' rel='stylesheet'>
   </head>
   <body>
-    <section class="section header-section"></section>
+    <section class="section header-section">
+      <header>
+        <div>About</div>
+        <div>Build</div>
+        <div class="logo">Logo</div>
+        <div>Advisor</div>
+        <div>Help</div>
+      </header>
+    </section>
     <section class="halfsection quote-section"></section>
     <section class="halfsection quality-section"></section>
     <section class="halfsection image-section"></section>
@@ -14,5 +23,7 @@
     <section class="halfsection detail-section-two"></section>
     <section class="halfsection detail-section-three"></section>
     <footer></footer>
+
+
   </body>
 </html>
