added content to h1

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <body>
     <section class="section header-section"></section>
     <section class="halfsection quote-section"></section>
+    <h1>OUR MANIFESTO: </br>
+      QUALITY, URBAN, HERITAGE, BEAUTY, SIMPLE,</br>
+      CARE, SERVIC, CUSTOM, CRAFT, PRIDE</h1>
+  </section>
+
     <section class="halfsection quality-section"></section>
     <section class="halfsection image-section"></section>
     <section class="halfsection detail-section-one"></section>
