--- a/index.html
+++ b/index.html
@@ -4,23 +4,42 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="main.css">
-    <link href='https://fonts.googleapis.com/css?family=Heebo' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css?family=Heebo:100,300,400,500,700" rel="stylesheet">
   </head>
   <body>
-    <section class="section header-section">
-      <header>
-        <div>About</div>
-        <div>Build</div>
+    <section class="first">
+
+    <div class="header">
+        <p>About</p>
+        <p>Build</p>
         <div class="logo">Logo</div>
-        <div>Advisor</div>
-        <div>Help</div>
-      </header>
+        <p>Advisor</p>
+        <p>Help</p>
+    </div><!--header end -->
+    <img class="hero-img" src="img/front.jpg" alt="">
+    </section><!-- first end -->
+
+    <section class="second">
+        <div class="quote">
+          OUR MANIFESTO: </br>
+          QUALITY, URBAN, HERITAGE, BEAUTY, SIMPLE,</br>
+          CARE, SERVICE, CUSTOM, CRAFT, PRIDE.
+        </div>
+        <!-- <img class="second-img" src="img/second.jpg" alt=""> -->
     </section>
-    <section class="halfsection quote-section"></section>
-    <h1>OUR MANIFESTO: </br>
-      QUALITY, URBAN, HERITAGE, BEAUTY, SIMPLE,</br>
-      CARE, SERVIC, CUSTOM, CRAFT, PRIDE</h1>
+    <section class="third">
+      <div class="quality-content">
+      <div class="headline">QUALITY</div>
+      Our crafted bikes are built</br> to fit your style & your life
+      <div class="button">Learn more</div>
+      </div>
     </section>
+    <section class="fourth">
+      <div class="image-box">img</div>
+      <div class="image-box">img</div>
+      <div class="image-box">img</div>
+    </section>
+
     <section class="halfsection quality-section"></section>
     <section class="halfsection image-section"></section>
     <section class="halfsection detail-section-one"></section>
