added img to image-box

--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
       </div>
     </section>
     <section class="fourth">
-      <div class="image-box">img</div>
-      <div class="image-box">img</div>
-      <div class="image-box">img</div>
+        <img class="image-box" src="img/pink.jpg" alt="">
+        <img class="image-box" src="img/yellow.jpg" alt="">
+        <img class="image-box" src="img/orange.jpg" alt="">
+
     </section>
 
     <section class="halfsection quality-section"></section>
