--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
       </div>
     </section>
     <section class="fourth">
-        <img class="image-box" src="img/pink.jpg" alt="">
-        <img class="image-box" src="img/yellow.jpg" alt="">
-        <img class="image-box" src="img/orange.jpg" alt="">
+        <img class="image-box" src="img/blue-black.jpg" alt="">
+        <img class="image-box" src="img/yellow-black.jpg" alt="">
+        <img class="image-box" src="img/orange-black.jpg" alt="">
 
     </section>
 
