--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p>Advisor</p>
         <p>Help</p>
     </div><!--header end -->
-    <img class="hero-img" src="img/front.jpg" alt="">
+
     </section><!-- first end -->
 
     <section class="second">
@@ -35,9 +35,9 @@
       </div>
     </section>
     <section class="fourth">
-        <img class="image-box" src="img/blue-black.jpg" alt="">
-        <img class="image-box" src="img/yellow-black.jpg" alt="">
-        <img class="image-box" src="img/orange-black.jpg" alt="">
+        <img class="image-box" src="img/hjul.jpg" alt="">
+        <!-- <img class="image-box" src="img/sadel.jpg" alt=""> -->
+        <img class="image-box" src="img/welding.jpg" alt="">
 
     </section>
 
