--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>Advisor</p>
         <p>Help</p>
     </div><!--header end -->
-
+    <img class="hero-img" src="img/front.jpg" alt="">
     </section><!-- first end -->
 
     <section class="second">
