added flex to grid and removed section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="main.css">
+     <meta name="viewport" content="width=device-width">
     <link href="https://fonts.googleapis.com/css?family=Heebo:100,300,400,500,700" rel="stylesheet">
   </head>
   <body>
@@ -33,11 +34,6 @@
       <div class="button">Learn more</div>
       </div>
     </section>
-    <section class="fourth">
-        <img class="image-box" src="img/blue-black.jpg" alt="">
-        <img class="image-box" src="img/yellow-black.jpg" alt="">
-        <img class="image-box" src="img/orange-black.jpg" alt="">
-    </section>
     <section class="grid-section">
       <div class="grid-container">
         <div class="grid-text">
@@ -51,8 +47,6 @@
         </div>
         <div class="grid-image">
         </div>
-        <div class="grid-image">
-        </div>
         <div class="grid-text">
           <h2>HEADER</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br>
@@ -61,6 +55,8 @@
              culpa soluta rem odit error alias! Lorem ipsum dolor sit amet, <br>
              consectetur adipisicing elit. Impedit, maiores!
           </p>
+        </div>
+        <div class="grid-image">
         </div>
         <div class="grid-text">
           <h2>HEADER</h2>
