--- a/index.html
+++ b/index.html
@@ -12,12 +12,19 @@
     <div class="header">
         <p>About</p>
         <p>Build</p>
-        <div class="logo">Logo</div>
+        <img class="logo" src="img/mago-logo.svg">
         <p>Advisor</p>
         <p>Help</p>
     </div><!--header end -->
+    <div class="headline-box">
+      BIKES ARE OUR PASSION
 
-    <img class="hero-img" src="img/front.jpg" alt="">
+    </div>
+
+    <img class="hero-img" src="img/hero-blacker.jpg" alt="">
+    <div class="scroll-down">SCROLL DOWN</div>
+
+    <img class="pil-ner-top" src="img/pil-ner-top.svg">
 
     </section><!-- first end -->
 
@@ -73,6 +80,38 @@
         </div>
       </div>
     </section>
-    <footer></footer>
+    <footer>
+
+
+
+          <div class="footermenu">
+
+            <div class="footermenu-content">
+            <p class="footer-title">Mango Bicycles</p>
+            <p class="designed-by">Designed by:</p>
+            <a href="https://github.com/AdrianJung">Adrian Jungnelius</a>
+            <a href="https://github.com/IsabelleKrall">Isabelle Krall</a>
+            </div>
+
+              <div class="socialmedia">
+                <a href="#"><img class="social-icons"src="social/facebook-white.svg" alt="facebook"></a>
+                <a href="#"><img class="social-icons"src="social/instagram-white.svg" alt="instagram"></a>
+                <a href="#"><img class="social-icons"src="social/twitter-white.svg" alt="twitter"></a>
+              </div>
+
+              <div class="copyright">
+                <a href="#top" class="to-top">Back to top<img class="arrow" src="img/pil-upp.svg"></a></br></br>
+                <p>Copyright © 2018 Mango Bikes</p>
+              </div>
+          </div>
+
+
+
+
+        </footer>
+    </footer>
+    <script src="script.js">
+
+    </script>
   </body>
   </html>
