added burger menu and fixed detail section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
   </head>
   <body>
     <section class="first">
+      <div class="icon">
+        <div class="hamburger"></div>
+      </div>
+      <div id="simpleModal" class="modal">
+        <div class="modal-content">
+          <p class="text-item text-1">About</p>
+          <p class="text-item text-2">Build</p>
+          <p class="text-item text-3">Advisor</p>
+          <p class="text-item text-4">Help</p>
+        </div>
+      </div>
     <div class="header">
         <p>About</p>
         <p>Build</p>
@@ -36,43 +47,55 @@
       <div class="button">Learn more</div>
       </div>
     </section>
-    <section class="grid-section">
-      <div class="grid-container">
+    <section class="flex-section">
+      <div class="flex-container">
+          <div class="flex">
         <div class="grid-text">
           <h2>HEADER</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br>
-             Fuga cumque commodi in eaque accusantium magnam at dicta,<br>
-            quidem reiciendis repellendus harum, sequi dignissimos autem,<br>
-             culpa soluta rem odit error alias! Lorem ipsum dolor sit amet, <br>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+             Fuga cumque commodi in eaque accusantium magnam at dicta,
+            quidem reiciendis repellendus harum, sequi dignissimos autem,
+             culpa soluta rem odit error alias! Lorem ipsum dolor sit amet,
              consectetur adipisicing elit. Impedit, maiores!
           </p>
         </div>
-        <div class="grid-image">
+        <div class="image-box">
+          <div class="grid-image first-image">
+          </div>
         </div>
+      </div>
+    <div class="flex second-flex">
+      <div class="grid-text second-text">
+        <h2>SECOND HEADER</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          Fuga cumque commodi in eaque accusantium magnam at dicta,
+          quidem reiciendis repellendus harum, sequi dignissimos autem,
+          culpa soluta rem odit error alias! Lorem ipsum dolor sit amet,
+          consectetur adipisicing elit. Impedit, maiores!
+        </p>
+      </div>
+        <div class="image-box second-image-box">
+          <div class="grid-image second-image">
+          </div>
+        </div>
+    </div>
+      <div class="flex">
         <div class="grid-text">
           <h2>HEADER</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br>
-             Fuga cumque commodi in eaque accusantium magnam at dicta,<br>
-            quidem reiciendis repellendus harum, sequi dignissimos autem,<br>
-             culpa soluta rem odit error alias! Lorem ipsum dolor sit amet, <br>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+             Fuga cumque commodi in eaque accusantium magnam at dicta,
+            quidem reiciendis repellendus harum, sequi dignissimos autem,
+             culpa soluta rem odit error alias! Lorem ipsum dolor sit amet,
              consectetur adipisicing elit. Impedit, maiores!
           </p>
         </div>
-        <div class="grid-image">
-        </div>
-        <div class="grid-text">
-          <h2>HEADER</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br>
-             Fuga cumque commodi in eaque accusantium magnam at dicta,<br>
-            quidem reiciendis repellendus harum, sequi dignissimos autem,<br>
-             culpa soluta rem odit error alias! Lorem ipsum dolor sit amet, <br>
-             consectetur adipisicing elit. Impedit, maiores!
-          </p>
-        </div>
-        <div class="grid-image">
+        <div class="image-box">
+          <div class="grid-image third-image">
+          </div>
         </div>
       </div>
     </section>
     <footer></footer>
   </body>
+  <script src="main.js" charset="utf-8"></script>
   </html>
