cleaned up the code

--- a/index.html
+++ b/index.html
@@ -81,9 +81,6 @@
       </div>
     </section>
     <footer>
-
-
-
           <div class="footermenu">
 
             <div class="footermenu-content">
@@ -101,15 +98,10 @@
 
               <div class="copyright">
                 <a href="#top" class="to-top">Back to top<img class="arrow" src="img/pil-upp.svg"></a></br></br>
-                <p>Copyright © 2018 Mango Bikes</p>
+                <p>Copyright © 2018 Mango Bicycles</p>
               </div>
           </div>
-
-
-
-
         </footer>
-    </footer>
     <script src="script.js">
 
     </script>
