added styling to burgermodal and added video section

--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
       <div class="button">Learn more</div>
       </div>
     </section>
+    <section class="fourth">
+      <video autoplay loop muted>
+        <source src="img/bikevideo.mp4">
+        </video>
+    </section>
     <section class="flex-section">
       <div class="flex-container">
           <div class="flex">
@@ -108,8 +113,8 @@
             <div class="footermenu-content">
             <p class="footer-title">Mango Bicycles</p>
             <p class="designed-by">Designed by:</p>
-            <a href="https://github.com/AdrianJung">Adrian Jungnelius</a>
-            <a href="https://github.com/IsabelleKrall">Isabelle Krall</a>
+            <a class="name" href="https://github.com/AdrianJung">Adrian Jungnelius</a>
+            <a class="name" href="https://github.com/IsabelleKrall">Isabelle Krall</a>
             </div>
 
               <div class="socialmedia">
@@ -117,16 +122,15 @@
                 <a href="#"><img class="social-icons"src="social/instagram-white.svg" alt="instagram"></a>
                 <a href="#"><img class="social-icons"src="social/twitter-white.svg" alt="twitter"></a>
               </div>
-
-              <div class="copyright">
-                <a href="#top" class="to-top">Back to top<img class="arrow" src="img/pil-upp.svg"></a></br></br>
+                <div class="copyright">
                 <p>Copyright © 2018 Mango Bicycles</p>
+              </div>
+              <div class="backtotop">
+                <a href="#top" class="to-top">Back to top<img class="arrow" src="img/pil-upp.svg"></a></br></br>
               </div>
           </div>
         </footer>
     <script src="script.js">
-
     </script>
   </body>
-  <script src="main.js" charset="utf-8"></script>
   </html>
