added media queries + styling
- designed-by
-headline-box
-quality-content
-back-to-top

+ removed .copyright

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="header">
         <p>About</p>
         <p>Build</p>
-        <img class="logo" src="img/mango-logo.svg">
+        <img class="logo" src="img/mago-logo.svg">
         <p>Advisor</p>
         <p>Help</p>
     </div><!--header end -->
@@ -38,7 +38,6 @@
     <img class="pil-ner-top" src="img/pil-ner-top.svg">
 
     </section><!-- first end -->
-
     <section class="second">
         <div class="quote">
           OUR MANIFESTO: </br>
@@ -122,9 +121,9 @@
                 <a href="#"><img class="social-icons"src="social/instagram-white.svg" alt="instagram"></a>
                 <a href="#"><img class="social-icons"src="social/twitter-white.svg" alt="twitter"></a>
               </div>
-                <div class="copyright">
+                <!-- <div class="copyright">
                 <p>Copyright © 2018 Mango Bicycles</p>
-              </div>
+              </div> -->
               <div class="backtotop">
                 <a href="#top" class="to-top">Back to top<img class="arrow" src="img/pil-upp.svg"></a></br></br>
               </div>
