fixed all the stuff

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p>Help</p>
     </div><!--header end -->
     <div class="headline-box">
-      BIKES ARE OUR PASSION
+    BIKES ARE OUR PASSION
 
     </div>
 
@@ -62,12 +62,10 @@
       <div class="flex-container">
           <div class="flex">
         <div class="grid-text">
-          <h2>HEADER</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-             Fuga cumque commodi in eaque accusantium magnam at dicta,
-            quidem reiciendis repellendus harum, sequi dignissimos autem,
-             culpa soluta rem odit error alias! Lorem ipsum dolor sit amet,
-             consectetur adipisicing elit. Impedit, maiores!
+          <h2>CUSTOMIZE YOUR OWN BIKE</h2>
+          <p>Prove to the world that there’s no such thing as clashing colours. For designers and those with artistic sensibilities, our custom bikes give you complete autonomy to literally modify the nuts off our bikes.
+             Unleash your creativity and make a one-off fixie,
+             single speed or 16 speed bike that you actually want to ride from millions of different combinations.
           </p>
         </div>
         <div class="image-box">
@@ -106,9 +104,21 @@
         </div>
       </div>
     </section>
+    <section class="fifth">
+      <h1 class="about-story">OUR STORY</h1>
+      <div class="about-text">
+        <p class="our-story-text">
+          Like any story worth telling, our journey from bikes to boardroom has more than one chapter.
+          Scroll down below and click on “Read More” to learn about the early days, recounting how a humble band of British bikers,
+          led by Ben and Jezz, punched their way to the top to form Mango Bikes.
+          We’ve come a long way since then, but getting here wasn’t a smooth ride. In 2017 Mango hit a bump,
+          like those potholes that send you head-over-handlebars. It was a mix of good bikes, bad numbers, and some not-so-wise prophets.
+          Things went a little sour, like those mangos that just don’t taste right, so it was time for a change. Instead of lounging around in defeat, we did what riders do.
+          We got Mango back on the bike – metaphorically first, but then for real. </p>
+         </div>
+    </section>
     <footer>
           <div class="footermenu">
-
             <div class="footermenu-content">
             <p class="footer-title">Mango Bicycles</p>
             <p class="designed-by">Designed by:</p>
