--- a/index.html
+++ b/index.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="main.css">
-     <meta name="viewport" content="width=device-width">
-    <link href="https://fonts.googleapis.com/css?family=Heebo:100,300,400,500,700" rel="stylesheet">
-  </head>
-  <body>
-    <section class="first">
-      <div class="icon">
-        <div class="hamburger"></div>
+
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <link rel="stylesheet" href="main.css">
+  <meta name="viewport" content="width=device-width">
+  <link href="https://fonts.googleapis.com/css?family=Heebo:100,300,400,500,700" rel="stylesheet">
+</head>
+
+<body>
+  <section class="first">
+    <div class="icon">
+      <div class="hamburger"></div>
+    </div>
+    <div id="simpleModal" class="modal">
+      <div class="modal-content">
+        <p class="text-item text-1">About</p>
+        <p class="text-item text-2">Build</p>
+        <p class="text-item text-3">Advisor</p>
+        <p class="text-item text-4">Help</p>
       </div>
-      <div id="simpleModal" class="modal">
-        <div class="modal-content">
-          <p class="text-item text-1">About</p>
-          <p class="text-item text-2">Build</p>
-          <p class="text-item text-3">Advisor</p>
-          <p class="text-item text-4">Help</p>
-        </div>
-      </div>
+    </div>
     <div class="header">
-        <p>About</p>
-        <p>Build</p>
-        <img class="logo" src="img/mago-logo.svg">
-        <p>Advisor</p>
-        <p>Help</p>
-    </div><!--header end -->
+      <p>About</p>
+      <p>Build</p>
+      <img class="logo" src="img/mago-logo.svg">
+      <p>Advisor</p>
+      <p>Help</p>
+    </div>
+    <!--header end -->
     <div class="headline-box">
-    BIKES ARE OUR PASSION
+      BIKES ARE OUR PASSION
 
     </div>
 
@@ -37,35 +40,35 @@
 
     <img class="pil-ner-top" src="img/pil-ner-top.svg">
 
-    </section><!-- first end -->
-    <section class="second">
-        <div class="quote">
-          OUR MANIFESTO: </br>
-          <span class="black-text">QUALITY</span> URBAN <span class="black-text">HERITAGE</span> BEAUTY SIMPLE</br>
-          CARE <span class="black-text">SERVICE</span> CUSTOM CRAFT <span class="black-text">PRIDE</span>.
-        </div>
-        <!-- <img class="second-img" src="img/second.jpg" alt=""> -->
-    </section>
-    <section class="third">
-      <div class="quality-content">
+  </section><!-- first end -->
+  <section class="second">
+    <div class="quote">
+      OUR MANIFESTO: </br>
+      <span class="black-text">QUALITY</span> URBAN <span class="black-text">HERITAGE</span> BEAUTY SIMPLE</br>
+      CARE <span class="black-text">SERVICE</span> CUSTOM CRAFT <span class="black-text">PRIDE</span>.
+    </div>
+    <!-- <img class="second-img" src="img/second.jpg" alt=""> -->
+  </section>
+  <section class="third">
+    <div class="quality-content">
       <div class="headline">QUALITY</div>
       Our crafted bikes are built</br> to fit your style & your life
       <div class="button">Learn more</div>
-      </div>
-    </section>
-    <section class="fourth">
-      <video autoplay loop muted>
-        <source src="img/bikevideo.mp4">
-        </video>
-    </section>
-    <section class="flex-section">
-      <div class="flex-container">
-          <div class="flex">
+    </div>
+  </section>
+  <section class="fourth">
+    <video autoplay loop muted>
+      <source src="img/bikevideo.mp4">
+    </video>
+  </section>
+  <section class="flex-section">
+    <div class="flex-container">
+      <div class="flex">
         <div class="grid-text">
           <h2>CUSTOMIZE YOUR OWN BIKE</h2>
           <p>Prove to the world that there’s no such thing as clashing colours. For designers and those with artistic sensibilities, our custom bikes give you complete autonomy to literally modify the nuts off our bikes.
-             Unleash your creativity and make a one-off fixie,
-             single speed or 16 speed bike that you actually want to ride from millions of different combinations.
+            Unleash your creativity and make a one-off fixie,
+            single speed or 16 speed bike that you actually want to ride from millions of different combinations.
           </p>
         </div>
         <div class="image-box">
@@ -73,29 +76,26 @@
           </div>
         </div>
       </div>
-    <div class="flex second-flex">
-      <div class="grid-text second-text">
-        <h2>SECOND HEADER</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-          Fuga cumque commodi in eaque accusantium magnam at dicta,
-          quidem reiciendis repellendus harum, sequi dignissimos autem,
-          culpa soluta rem odit error alias! Lorem ipsum dolor sit amet,
-          consectetur adipisicing elit. Impedit, maiores!
-        </p>
-      </div>
+      <div class="flex second-flex">
+        <div class="grid-text second-text">
+          <h2>BUILD YOUR OG</h2>
+          <p><b>Never ride stock.</b> design your own OG road bike, to suit your style.
+            If none of our set designs take your fancy, don’t worry, because you can build your dream bike from the ground up,
+            choosing from 8 to 9 colours per component, the possibilities are endless.
+            Once you’re done deciding on the finishing touches, hit add to cart and our team of bike builders will build your dream bike to spec and ship directly to your door.
+          </p>
+        </div>
         <div class="image-box second-image-box">
           <div class="grid-image second-image">
           </div>
         </div>
-    </div>
+      </div>
       <div class="flex">
         <div class="grid-text">
-          <h2>HEADER</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-             Fuga cumque commodi in eaque accusantium magnam at dicta,
-            quidem reiciendis repellendus harum, sequi dignissimos autem,
-             culpa soluta rem odit error alias! Lorem ipsum dolor sit amet,
-             consectetur adipisicing elit. Impedit, maiores!
+          <h2>LIFE'S COMPLICATED ENOUGH</h2>
+          <p>We’ve been bent on making the best single speed bike on the market, and we’ve finally nailed it. This is it; the alpha, omega, first, and last.
+             The only bike you’ll ever need for a simple ride and a simpler life.
+              Globally loved and praised, it’s now even better value than before.
           </p>
         </div>
         <div class="image-box">
@@ -103,44 +103,44 @@
           </div>
         </div>
       </div>
-    </section>
-    <section class="fifth">
-      <h1 class="about-story">OUR STORY</h1>
-      <div class="about-text">
-        <p class="our-story-text">
-          Like any story worth telling, our journey from bikes to boardroom has more than one chapter.
-          Scroll down below and click on “Read More” to learn about the early days, recounting how a humble band of British bikers,
-          led by Ben and Jezz, punched their way to the top to form Mango Bikes.
-          We’ve come a long way since then, but getting here wasn’t a smooth ride. In 2017 Mango hit a bump,
-          like those potholes that send you head-over-handlebars. It was a mix of good bikes, bad numbers, and some not-so-wise prophets.
-          Things went a little sour, like those mangos that just don’t taste right, so it was time for a change. Instead of lounging around in defeat, we did what riders do.
-          We got Mango back on the bike – metaphorically first, but then for real. </p>
-         </div>
-    </section>
-    <footer>
-          <div class="footermenu">
-            <div class="footermenu-content">
-            <p class="footer-title">Mango Bicycles</p>
-            <p class="designed-by">Designed by:</p>
-            <a class="name" href="https://github.com/AdrianJung">Adrian Jungnelius</a>
-            <a class="name" href="https://github.com/IsabelleKrall">Isabelle Krall</a>
-            </div>
+  </section>
+  <section class="fifth">
+    <h1 class="about-story">OUR STORY</h1>
+    <div class="about-text">
+      <p class="our-story-text">
+        Like any story worth telling, our journey from bikes to boardroom has more than one chapter.
+        In 2017 Mango hit a bump,  like those potholes that send you head-over-handlebars.
+        It was a mix of good bikes, bad numbers, and some not-so-wise prophets.
+        Things went a little sour, like those mangos that just don’t taste right, so it was time for a change. Instead of lounging around in defeat, we did what riders do.
+        We got Mango back on the bike – metaphorically first, but then for real.
+        We relocated to Ballyclare in Northern Ireland, where we still make the same brilliant bikes, but with twice the rainfall and a nicer view.</p>
+    </div>
+  </section>
+  <footer>
+    <div class="footermenu">
+      <div class="footermenu-content">
+        <p class="footer-title">Mango Bicycles</p>
+        <p class="designed-by">Designed by:</p>
+        <a class="name" href="https://github.com/AdrianJung">Adrian Jungnelius</a>
+        <a class="name" href="https://github.com/IsabelleKrall">Isabelle Krall</a>
+      </div>
 
-              <div class="socialmedia">
-                <a href="#"><img class="social-icons"src="social/facebook-white.svg" alt="facebook"></a>
-                <a href="#"><img class="social-icons"src="social/instagram-white.svg" alt="instagram"></a>
-                <a href="#"><img class="social-icons"src="social/twitter-white.svg" alt="twitter"></a>
-              </div>
-                <!-- <div class="copyright">
+      <div class="socialmedia">
+        <a href="#"><img class="social-icons" src="social/facebook-white.svg" alt="facebook"></a>
+        <a href="#"><img class="social-icons" src="social/instagram-white.svg" alt="instagram"></a>
+        <a href="#"><img class="social-icons" src="social/twitter-white.svg" alt="twitter"></a>
+      </div>
+      <!-- <div class="copyright">
                 <p>Copyright © 2018 Mango Bicycles</p>
               </div> -->
-              <div class="backtotop">
-                <a href="#top" class="to-top">Back to top<img class="arrow" src="img/pil-upp.svg"></a></br></br>
-              </div>
-          </div>
-        </footer>
+      <div class="backtotop">
+        <a href="#top" class="to-top">Back to top<img class="arrow" src="img/pil-upp.svg"></a></br></br>
+      </div>
+    </div>
+  </footer>
 
-    <script src="script.js">
-    </script>
-  </body>
-  </html>
+  <script src="script.js">
+  </script>
+</body>
+
+</html>
