--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     </div>
 
-    <img class="hero-img" src="img/hero-blacker.jpg" alt="">
+    <img class="hero-img" src="img/front.jpg" alt="">
     <div class="scroll-down">SCROLL DOWN</div>
 
     <img class="pil-ner-top" src="img/pil-ner-top.svg">
@@ -53,7 +53,6 @@
     <div class="quality-content">
       <div class="headline">QUALITY</div>
       Our crafted bikes are built</br> to fit your style & your life
-      <div class="button">Learn more</div>
     </div>
   </section>
   <section class="fourth">
