--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
       </div>
     </div>
     <div class="header">
-      <p>About</p>
-      <p>Build</p>
-      <img class="logo" src="img/mago-logo.svg">
-      <p>Advisor</p>
-      <p>Help</p>
-    </div>
+    <p>About</p>
+    <p>Build</p>
+    <img class="logo" src="img/mango-logo.svg">
+    <p>Advisor</p>
+    <p>Help</p>
+  </div><!--header end -->
     <!--header end -->
     <div class="headline-box">
       BIKES ARE OUR PASSION
@@ -115,13 +115,14 @@
         We relocated to Ballyclare in Northern Ireland, where we still make the same brilliant bikes, but with twice the rainfall and a nicer view.</p>
     </div>
   </section>
+  <button class="button">Get Started</button>
   <footer>
     <div class="footermenu">
       <div class="footermenu-content">
-        <p class="footer-title">Mango Bicycles</p>
-        <p class="designed-by">Designed by:</p>
+        <p class="footer-title"><img class="logo logo2" src="img/mango-logo.svg"></p>
+        <!-- <p class="designed-by">Designed by:</p>
         <a class="name" href="https://github.com/AdrianJung">Adrian Jungnelius</a>
-        <a class="name" href="https://github.com/IsabelleKrall">Isabelle Krall</a>
+        <a class="name" href="https://github.com/IsabelleKrall">Isabelle Krall</a> -->
       </div>
 
       <div class="socialmedia">
